refactor: estabilizar fluxo whatsapp financeiro com logica real de cobrancas